samples/_failures_safe/1761172131_ae087a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6ae3ae1.c: In function ‘main’:
./samples/SAFE/__tmp_d6ae3ae1.c:135:20: error: expected ‘;’ at end of input
  135 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_d6ae3ae1.c:135:9: error: expected declaration or statement at end of input
  135 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_d6ae3ae1.c:135:9: error: expected declaration or statement at end of input
